day 4 complete. day 5 started

--- a/helpers/Cargo.toml
+++ b/helpers/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "day_4"
+name = "helpers"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,4 +7,3 @@ edition = "2021"
 
 [dependencies]
 argh = "0.1.9"
-helpers = {path = "../helpers"}
