--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,23 +4,23 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    {
-        "type": "lldb",
-        "request": "launch",
-        "name": "Debug day_7",
-        "cargo": {
-            "args": [
-                "build",
-                    "--bin=day_7",
-                    "--package=day_7"
-            ],
-            "filter": {
-                "name": "day_7",
-                "kind": "bin"
-            }
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug day_9",
+            "cargo": {
+                "args": [
+                    "build",
+                        "--bin=day_9",
+                        "--package=day_9"
+                ],
+                "filter": {
+                    "name": "day_9",
+                    "kind": "bin"
+                }
+            },
+            "args": ["-d"]
         },
-        "args": []
-    },
         {
             "type": "lldb",
             "request": "launch",
