--- a/day_16/Cargo.toml
+++ b/day_16/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "day_15"
+name = "day_16"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,3 +7,4 @@ edition = "2021"
 anyhow = "1.0.66"
 argh = "0.1.9"
 helpers = {path = "../helpers"}
+regex = "1"
